--- a/src/components/button/button-logo.html
+++ b/src/components/button/button-logo.html
@@ -1,1 +1,9 @@
-<button class="btn">🐶</button>
+<div>
+  <button class="btn-logo">
+    <div>
+      <img src="../../assets/playbtn.svg" alt="Playbtn" />
+
+      Play
+    </div>
+  </button>
+</div>
