--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,8 +1,17 @@
 .btn {
-  border-radius: 20px;
+  border-radius: 12px;
   font-size: 1.2rem;
   color: white;
-  background: #016b6b;
+  background: #ed8770;
   border: none;
   padding: 10px 20px;
+}
+
+.btn-logo {
+  border-radius: 30px;
+  font-size: 1.2rem;
+  color: white;
+  background: linear-gradient(to bottom, #ed8770, #d9519d);
+  padding: 5px 30px 5px 30px;
+  height: 35px;
 }
