--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,17 +1,20 @@
 .btn {
-  border-radius: 12px;
-  font-size: 1.2rem;
+  background-color: transparent;
+  border-radius: 30px;
+  border: 0.5px solid white;
+  font-size: 0.5rem;
   color: white;
-  background: #ed8770;
-  border: none;
-  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 10px 0px 10px;
+  height: 20px;
 }
 
-.btn-logo {
-  border-radius: 30px;
-  font-size: 1.2rem;
-  color: white;
-  background: linear-gradient(to bottom, #ed8770, #d9519d);
-  padding: 5px 30px 5px 30px;
-  height: 35px;
+.action {
+  background-image: linear-gradient(#ed8770, #d9519d);
+}
+
+button > :first-child {
+  margin-right: 10px;
 }
