--- a/src/components/MainPlayerMenu/iconBackward.html
+++ b/src/components/MainPlayerMenu/iconBackward.html
@@ -3,4 +3,4 @@
   Add to Favorites
 </button> -->
 
-<a img src="../../assets/backwardarrow.svg" alt="BWArrow"></a>
+<img src="../../assets/backwardarrow.svg" alt="BWArrow" />
