--- a/src/components/ButtonNavigation/btnNav.html
+++ b/src/components/ButtonNavigation/btnNav.html
@@ -1,5 +1,5 @@
 <footer class="btnNav">
   <div>Home</div>
-  <div>Songs</div>
-  <div>Settings</div>
+  <div><img src="../../assets/musicNote.svg" />Songs</div>
+  <div><img src="../../assets/gearwheel.svg" />Settings</div>
 </footer>
