--- a/src/components/MainPlayerMenu/iconBackward.html
+++ b/src/components/MainPlayerMenu/iconBackward.html
@@ -1,6 +1,6 @@
 <!-- <button class="btn">
-  <img src="../../assets/Favoritesbtn.svg" alt="Favoritebtn" />
+  <img src="../../assets/svg/Favoritesbtn.svg" alt="Favoritebtn" />
   Add to Favorites
 </button> -->
 
-<img src="../../assets/backwardarrow.svg" alt="BWArrow" />
+<img src="../../assets/svg/backwardarrow.svg" alt="BWArrow" />
