--- a/src/components/MainPlayerMenu/iconFavorites.html
+++ b/src/components/MainPlayerMenu/iconFavorites.html
@@ -1,5 +1,5 @@
 <button class="icon">
-  <img src="../../assets/iconFavorites.svg" alt="FavoritesIcon" />
+  <img src="../../assets/svg/iconFavorites.svg" alt="FavoritesIcon" />
 
   Favourites
 </button>
