--- a/src/components/MainPlayerMenu/iconForward.html
+++ b/src/components/MainPlayerMenu/iconForward.html
@@ -1,5 +1,5 @@
 <button class="btn action">
-  <img src="../../assets/playbtn.svg" alt="Playbtn" />
+  <img src="../../assets/svg/playbtn.svg" alt="Playbtn" />
 
   Play
 </button>
