--- a/src/components/MainPlayerMenu/iconPlayPause.html
+++ b/src/components/MainPlayerMenu/iconPlayPause.html
@@ -1,5 +1,5 @@
 <button class="btn">
-  <img src="../../assets/sharebtn.svg" alt="Sharebtn" />
+  <img src="../../assets/svg/sharebtn.svg" alt="Sharebtn" />
 
   Share
 </button>
