--- a/src/components/MainPlayerMenu/iconPlaylist.html
+++ b/src/components/MainPlayerMenu/iconPlaylist.html
@@ -1,5 +1,5 @@
 <button class="icon">
-  <img src="../../assets/iconPlaylist.svg" alt="PlaylistIcon" />
+  <img src="../../assets/svg/iconPlaylist.svg" alt="PlaylistIcon" />
 
   Playlist
 </button>
