--- a/src/components/MainPlayerMenu/iconRepeat.html
+++ b/src/components/MainPlayerMenu/iconRepeat.html
@@ -1,5 +1,5 @@
 <button class="icon">
-  <img src="../../assets/iconRepeat.svg" alt="RepeatIcon" />
+  <img src="../../assets/svg/iconRepeat.svg" alt="RepeatIcon" />
 
   Repeat
 </button>
