--- a/src/components/MainPlayerMenu/iconShuffle.html
+++ b/src/components/MainPlayerMenu/iconShuffle.html
@@ -1,5 +1,5 @@
 <button class="icon">
-  <img src="../../assets/iconShuffle.svg" alt="ShuffleIcon" />
+  <img src="../../assets/svg/iconShuffle.svg" alt="ShuffleIcon" />
 
   Shuffle
 </button>
