--- a/src/components/logo/logo.html
+++ b/src/components/logo/logo.html
@@ -1,2 +1,2 @@
-<img class="logo" src="../../assets/logo.svg" alt="muzic" />
+<img class="logo" src="../../assets/svg/logo.svg" alt="muzic" />
 <h1 class="title">Muzic</h1>
