--- a/src/components/MainPlayerMenu/iconEQ.html
+++ b/src/components/MainPlayerMenu/iconEQ.html
@@ -1,5 +1,5 @@
 <button class="Icon">
-  <img src="../../assets/iconEQ.svg" alt="EQIcon" />
+  <img src="../../assets/svg/iconEQ.svg" alt="EQIcon" />
 
   EQ
 </button>
