--- a/src/components/button/btnFavorites.html
+++ b/src/components/button/btnFavorites.html
@@ -1,4 +1,4 @@
 <button class="btn">
-  <img src="../../assets/Favoritesbtn.svg" alt="Favoritebtn" />
+  <img src="../../assets/svg/Favoritesbtn.svg" alt="Favoritebtn" />
   Add to Favorites
 </button>
