Add bem at btnPlay

--- a/src/components/button/btnPlay.html
+++ b/src/components/button/btnPlay.html
@@ -1,5 +1,4 @@
-<button class="btn action">
-  <img src="../../assets/playbtn.svg" alt="Playbtn" />
-
-  Play
+<button class="btn btn--action">
+  <img src="../../assets/svg/playbtn.svg" alt="Playbtn" class="btn__icon" />
+  <p class="btn__play">Play</p>
 </button>
