--- a/src/components/MainPlayerMenu/iconBackward.html
+++ b/src/components/MainPlayerMenu/iconBackward.html
@@ -3,4 +3,6 @@
   Add to Favorites
 </button> -->
 
-<img src="../../assets/backwardarrow.svg" alt="BWArrow" />
+<div class="backarrow">
+  <img src="../../assets/backwardarrow.svg" alt="BWArrow" />
+</div>
