--- a/src/components/MainPlayerMenu/iconForward.html
+++ b/src/components/MainPlayerMenu/iconForward.html
@@ -1,5 +1,9 @@
-<button class="btn action">
+<!-- <button class="btn action">
   <img src="../../assets/playbtn.svg" alt="Playbtn" />
 
   Play
-</button>
+</button> -->
+
+<div class="forwardarrow">
+  <img src="../../assets/FWicon.svg" alt="FWArrow" />
+</div>
