--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
-
 @font-face {
   font-family: "Circular Std Medium";
   font-style: normal;
@@ -32,6 +30,10 @@
 *::after,
 *::before {
   box-sizing: border-box;
+}
+
+:root {
+  font-family: "Circular Std Medium", sans-serif;
 }
 
 html {
