--- a/src/global.css
+++ b/src/global.css
@@ -34,6 +34,8 @@
 
 :root {
   font-family: "Circular Std Medium", sans-serif;
+  --title-font-color: #a3a4ab;
+  --foot-note-font-color: #595b68;
 }
 
 html {
