--- a/src/components/MainPlayerMenu/iconBackward.html
+++ b/src/components/MainPlayerMenu/iconBackward.html
@@ -1,3 +1,3 @@
 <div class="backarrow">
-  <img src="../../assets/backwardarrow.svg" alt="BWArrow" />
+  <img src="../../assets/svg/backwardarrow.svg" alt="BWArrow" />
 </div>
